[project]
name = "nct-gateway"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.22.1",
    "core",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "pydantic-settings>=2.14.1",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.46.0",
]
[project.optional-dependencies]
tests = [
    "pytest",
    "pytest-asyncio",
    "aiosqlite",
    "httpx",
]


[tool.uv.sources]
core = { git = "https://github.com/MaxBro12/core.git", rev = "master" }
